--- a/_config.yml
+++ b/_config.yml
@@ -72,7 +72,7 @@ gplus:
   profilePage: https://plus.google.com/u/0/+piratskastrana
 
 flicker:
-  profilePage: https://www.flickr.com/photos/pirati/
+  profilePage: https://www.flickr.com/photos/164171884@N07/
 
 forum:
   page: https://forum.pirati.cz/
